# mahjong_cpp

./: .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  Gemfile  Makefile  README.md  Rakefile  _Makefile  mahjong  todo
cpputest/tests/: JUnitOutputTest.cpp
htdocs/: mj.css  mj.js
include/: tile.h
mahjong_evaluator/: CMakeLists.txt
mahjong_evaluator/include/: mj_evaluator.h
mahjong_evaluator/src/: CMakeLists.txt  evaluator.c  evaluator.cpp  tile_t.h  tiles.h
mahjong_evaluator/tst/: CMakeLists.txt  test_evaluator.cpp  test_terry_evaluator.cpp
spec/javascripts/: MahjongSpec.js
src/: CMakeLists.txt  main.cpp
src/exercise/: exercise_1.cpp
src/htmlGame/: CMakeLists.txt  HTMLCommandParser.cpp  HTMLCommandParser.h  HTMLMahjongGame.cpp  HTMLMahjongGame.h  HTMLMahjongGameFactory.cpp  HTMLMahjongGameFactory.h  HTMLMahjongGameRespond.cpp  HTMLMahjongGameRespond.h  HTMLMahjongGameServer.cpp  HTMLMahjongGameServer.h  HTMLUIEvent.cpp  HTMLUIEvent.h
src/html_ui/: HTMLCommandParser.cpp  HTMLCommandParser.h  HTMLMahjongGameRespond.cpp  HTMLMahjongGameRespond.h  HTMLMahjongGameServer.cpp  HTMLMahjongGameServer.h  HTMLUIEvent.cpp  HTMLUIEvent.h  html_game.cpp  html_game.h  httpd.cpp
src/httpServer/: CMakeLists.txt  httpd.cpp  httpd.h
src/mahjong/: AIPerspective.cpp  AIPerspective.h  EvaluatorAdapter.h  EvaluatorAdaptor.cpp  EvaluatorAdaptor.h  GameIDMap.h  GameState.cpp  GameState.h  Hand.cpp  Hand.h  MahjongCommand.cpp  MahjongCommand.h  MahjongGameRespond.h  Perspective.h  PlayerActionRequest.cpp  PlayerActionRequest.h  UIEvent.cpp  UIEvent.h  UserPerspective.cpp  UserPerspective.h  Wall.cpp  Wall.h  evaluator.cpp  evaluator.h  game.cpp  game.h  mahjong_game.h  mj_table.cpp  mj_table.h  tiles.cpp  tiles.h
src/mahjongCore/: AIPerspective.cpp  AIPerspective.h  CMakeLists.txt  EvaluatorAdaptor.cpp  EvaluatorAdaptor.h  GameID.h  GameIDMap.h  GameState.cpp  GameState.h  Hand.cpp  Hand.h  MahjongCommand.cpp  MahjongCommand.h  MahjongGameFactory.h  Perspective.h  PlayerActionRequest.h  TileArray.cpp  TileArray.h  UIEvent.h  UserPerspective.cpp  UserPerspective.h  Wall.cpp  Wall.h  aiGame.cpp  aiGame.h  game.cpp  game.h  mj_table.cpp  mj_table.h  tile.cpp  tile.h
src/mahjong_game/: AIPerspective.cpp  AIPerspective.h  GameIDMap.cpp  GameIDMap.h  MahjongCommand.cpp  MahjongCommand.h  MahjongGameRespond.h  Perspective.h  PlayerTiles.cpp  PlayerTiles.h  TilePool.cpp  TilePool.h  UIEvent.cpp  UIEventQueue.cpp  UIEventQueue.h  UserPerspective.cpp  UserPerspective.h  agent.h  ai_agent.cpp  ai_agent.h  evaluator.cpp  evaluator.h  game.cpp  game.h  game_builder.cpp  game_builder.h  mahjong_game.h  mj_table.cpp  mj_table.h  player.cpp  player.h  tile_pool.cpp  tile_pool.h  ui_agent.cpp  ui_agent.h
tst/: AllTests.cpp  CMakeLists.txt  evaluatorStubs.cpp  integrationTests.cpp  mocks.cpp  mocks.h  simple_evaluator.cpp  testAIPerspective.cpp  testEvaluatorAdapter.cpp  testEvaluatorAdaptor.cpp  testGame.cpp  testGameIDMap.cpp  testHTMLCommandParser.cpp  testHTMLCommandParserWithGMock.cpp  testHTMLMahjongGameRespond.cpp  testHTMLMahjongGameServer.cpp  testHand.cpp  testMahjongCommand.cpp  testMahjongTable.cpp  testTilePool.cpp  testUIEvent.cpp  testUserPerspective.cpp  testWall.cpp  test_ai_agent.cpp  test_evaluator.cpp  test_exercise_1.cpp  test_exercise_2.cpp  test_exercise_3.cpp  test_game_builder.cpp  test_html_game.cpp  test_player.cpp  test_tile_pool.cpp  test_tiles.cpp  test_ui_agent.cpp
tst/mahjongCore/: testGame.cpp  testHand.cpp  testTile.cpp  testTileArray.cpp  testTileArrayIsAbleToChow.cpp  testWall.cpp
tst/private/: test_exercise_3.cpp  test_tiles.cpp
